# btbot

./: .gitignore  README.md  app.py  dowtrader.py  ftsetrader.py  getprices.py  getprices_hour.py  gold_daily.csv  gold_hour_2.csv  goldtrader.py  pricelistener.py  pyproject.toml  streamed_prices.db  test.py  test2.py  w_s_daily_prices.csv  webapp.py
.github/workflows/: ci-pipeline.yml  test.yml
ansible/: playbook.yaml
files/: dow-trade.service.j2  ftse-trade.service.j2  gh-ar.service.j2  gold-trade.service.j2  ohlc-stream.service.j2
models/: backtests.py  indicators.py  prices.py  setup.py  trade_executor.py  trades.py  user.py
templates/: index.html
trading_strategy_backtester.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
